# PFQ

./: .gitignore  AUTHORS  Build.hs  CHANGELOG.md  CNAME  GHC_7.10.md  GOOGLE  INSTALL.md  Makefile  PFq.hs  PFq.hsc  README  README.md  Setup.hs  SimpleBuilder.hs  VERSION  cabal.config  cabal.config-LTS-3-GHC-7.10  cabal.config-LTS-4-GHC-7.10  cabal.config-LTS-5-GHC-7.10  cabal.config-LTS-7.6  cabal.config-TLS-8.9  cabal.config-ghc-8.0.2  cabal.config-ghc-8.2.1  cabal.config-lts-8.17  cabal.config.7.10  cabal.config.7.8  define.mk  index.html  params.json  pfq-counter.hs  pfq-counters.hs  pfq-dispatch.hs  pfq-dump.hs  pfq-framework.cabal  pfq-read.hs  pfq.cabal  runme.sh  test-dump.hs
Development/: SimpleBuilder.hs
Network/: PFq.hs  PFq.hsc
api/Haskell/: doc-index.html  index.html
api/c/: doxygen_sqlite3.db
api/cpp/: doxygen_sqlite3.db
api/haskell/: Network-PFq-Lang.html  Network-PFq.html  doc-index.html  index-frames.html  index.html  mini_Network-PFq-Lang.html  mini_Network-PFq.html
docs/: c-api.doxy  cpp-api.doxy  cpp-lang.doxy  lang.haddock  make_docs.sh  prologue.haddock  runme.sh  update.sh
doxygen/html/: annotated.html  classes.html  classnet_1_1pfq-members.html  classnet_1_1pfq.html  classnet_1_1pfq__error-members.html  classnet_1_1pfq__error.html  classnet_1_1queue-members.html  classnet_1_1queue.html  files.html  hierarchy.html  index.html  pfq-except_8hpp_source.html  pfq-queue_8hpp_source.html  pfq-util_8hpp_source.html  pfq_8hpp_source.html  structnet_1_1param_1_1caplen-members.html  structnet_1_1param_1_1caplen.html  structnet_1_1param_1_1class__-members.html  structnet_1_1param_1_1class__.html  structnet_1_1param_1_1details_1_1type__index.html  structnet_1_1param_1_1details_1_1type__index_3_01T_00_01T0_00_01Ts_8_8_8_4-members.html  structnet_1_1param_1_1details_1_1type__index_3_01T_00_01T0_00_01Ts_8_8_8_4.html  structnet_1_1param_1_1details_1_1type__index_3_01T_00_01T_00_01Ts_8_8_8_4-members.html  structnet_1_1param_1_1details_1_1type__index_3_01T_00_01T_00_01Ts_8_8_8_4.html  structnet_1_1param_1_1details_1_1type__index_3_01Tp_01_4-members.html  structnet_1_1param_1_1details_1_1type__index_3_01Tp_01_4.html  structnet_1_1param_1_1maxlen-members.html  structnet_1_1param_1_1maxlen.html  structnet_1_1param_1_1offset-members.html  structnet_1_1param_1_1offset.html  structnet_1_1param_1_1policy-members.html  structnet_1_1param_1_1policy.html  structnet_1_1param_1_1rx__slots-members.html  structnet_1_1param_1_1rx__slots.html  structnet_1_1param_1_1tx__slots-members.html  structnet_1_1param_1_1tx__slots.html  structnet_1_1queue_1_1const__iterator-members.html  structnet_1_1queue_1_1const__iterator.html  structnet_1_1queue_1_1iterator-members.html  structnet_1_1queue_1_1iterator.html  (+2 more)
driver/igb-3.2.10/: README  SUMS  igb.spec  pci.updates
driver/igb-3.3.6/: README  SUMS  (+3 more)
kernel/: .exrc  Makefile  Module.symvers  mpdb-queue.c  mpdb-queue.h  mpsc-skbuff.h  pf_q-GC.c  pf_q-GC.h  pf_q-batch.h  pf_q-bitops.h  pf_q-bits.h  pf_q-bounded-queue.h  pf_q-bpf.c  pf_q-bpf.h  pf_q-common.h  pf_q-define.h  pf_q-dev.h  pf_q-devmap.c  pf_q-devmap.h  pf_q-endpoint.c  pf_q-endpoint.h  pf_q-engine.c  pf_q-engine.h  pf_q-eval.h  pf_q-factory.c  pf_q-factory.h  pf_q-fp-engine.c  pf_q-fp-engine.h  pf_q-functional-default.c  pf_q-functional.c  pf_q-functional.h  pf_q-global.c  pf_q-global.h  pf_q-group.c  pf_q-group.h  pf_q-kcompact.h  pf_q-macro.h  pf_q-maybe.h  pf_q-memory.c  pf_q-memory.h  (+70 more)
script/: Makefile  ixgbe-setup.sh
stylesheets/: styles.css
tools/: CMakeLists.txt  Makefile  README  README.md  SConstruct  irq-affinity.hs  pfq'omatic.sh  pfq-omatic.hs  pfq-pcap-test-rewrite.cpp  set_irq_affinity.sh
user/: Makefile
user/C/: CMakeLists.txt  SConstruct  libpfq.c  libpfq.cpp  parson.c  pfq-int.h  pfq.h  test-dispatch.c
user/C/pfq/: pfq-int.h  pfq.h
user/Haskell/: Makefile  pfq-counters.hs  pfq-dispatch.hs  pfq-read.hs  pfq-send.hs  pfq.cabal  test-dispatch.hs  test-lang.hs  test-newlang.hs  test-read.hs  test-send.hs
user/Haskell/Network/: PFQ.hsc  PFlang.hs  PFq.hsc  PFqDefault.hs  PFqLang.hs
user/Haskell/Network/PFQ/: Lang.hs  Types.hs
user/Haskell/Network/PFQ/Lang/: Default.hs  Experimental.hs  Prelude.hs
user/Haskell/Network/PFq/: Default.hs  Experimental.hs  Lang.hs
user/Haskell/pfq-counters/: pfq-counters.cabal  pfq-counters.hs
user/Haskell/pfq-counters-hs/: pfq-counters-hs.cabal  pfq-counters-hs.hs
user/Haskell/pfq-hcounters/: pfq-hcounters.cabal  pfq-hcounters.hs
user/Haskell/pfq-htest/: pfq-htest.cabal  test-bloom.hs  test-dispatch.hs  test-lang.hs  test-read.hs  test-send.hs
user/Haskell/test/: Makefile  test-bloom.hs  test-dispatch.hs  test-lang.hs  test-read.hs  test-send.hs
user/perf/: CMakeLists.txt  SConstruct  affinity.hpp  ixgbe-setup.sh  pfq-counters.cpp  pfq-histo  pfq-histo.cpp  pfq-histogram.cpp  pfq-n-balancer.cpp  pfq-n-counters.cpp  pfq-stm.cpp
user/pfq-hcounters/: pfq-hcounters.cabal  pfq-hcounters.hs  stack.yaml
user/pfq-tools/: CMakeLists.txt  pfq-bridge.cpp  pfq-gen.cpp
user/regress/: CMakeLists.txt  SConstruct  test-regression-c.c  test-regression-capture.cpp  test-regression.cpp
user/regression/Haskell/: pfq-htest.cabal  stack.yaml  test-bloom.hs  test-dispatch.hs  test-lang.hs  test-read.hs  test-send.hs
user/test/: CMakeLists.txt  SConstruct  pcap-test-rewrite.cpp  test-batch++.cpp  test-bloom.cpp  test-bpf.cpp  test-caplen.cpp  test-dispatch.c  test-dump.cpp  test-filter.cpp  test-for-range.cpp  test-fun-lang.cpp  test-fun-prog.cpp  test-lang-default.cpp  test-lang-experimental.cpp  test-lang-functional.cpp  test-lang.c  test-lang.cpp  test-offset.cpp  test-read++.cpp  test-read.c  test-regression++.cpp  test-regression-c.c  test-regression-capture.cpp  test-regression-pcap-rewrite.cpp  test-regression.c  test-regression.cpp  test-send++.cpp  test-send.c  test-slot.cpp  test-steering-dummy.cpp  test-tstamp.cpp  test-tx-thread.cpp  test-vlan.cpp  yats.hpp
user/tool/: CMakeLists.txt  SConstruct  pfq-bridge.cpp  pfq-capture.cpp  pfq-counters.cpp  pfq-gen.cpp  pfq-histogram.cpp  pfq-lang.cpp  string.hpp
(+2985 files in other folders)
