name:            pfq-framework
version:         4.2
synopsis:        PFQ framework
description:     PFQ framework 
maintainer:      Nicola Bonelli <nicola@pfq.io> 
author:          Nicola Bonelli 
homepage:        https://www.pfq.io/
bug-reports:     https://github.com/pfq/PFQ/issues
category:        Network
cabal-version:   >= 1.10
build-type:      Simple

Library
  default-language: Haskell2010
  default-extensions: ForeignFunctionInterface, CPP
  build-depends: base >= 4.7, 
                 filepath, 
                 directory, 
                 unix, 
                 clock,
                 process, 
                 daemons, 
                 network, 
                 cmdargs, 
                 hslogger, 
                 ansi-terminal, 
                 storable-tuple, 
                 storable-record,
                 storablevector, 
                 data-default, 
                 semigroups, 
                 mtl, 
                 regex-posix, 
                 bytestring, 
                 split,
                 here



