name:            pfq-framework
version:         5.1
synopsis:        PFQ framework
description:     PFQ framework 
maintainer:      Nicola Bonelli <nicola@pfq.io> 
author:          Nicola Bonelli 
homepage:        https://www.pfq.io/
bug-reports:     https://github.com/pfq/PFQ/issues
category:        Network
cabal-version:   >= 1.10
build-type:      Simple

Library
  default-language: Haskell2010
  default-extensions: ForeignFunctionInterface, CPP
  build-depends: base >= 4.7, 
                 ansi-terminal, 
                 bytestring, 
                 clock,
                 cmdargs, 
                 containers,
                 daemons,
                 directory, 
                 filepath,  
                 here,
                 hslogger, 
                 mtl, 
                 network, 
                 old-time,
                 process, 
                 regex-posix, 
                 semigroups, 
                 split,
                 storable-record, 
                 storable-tuple,
                 storablevector,
                 unix


