name:            pfq
version:         3.5
synopsis:        PFQ interface for user-level packet capture
description:     PFQ interface for user-level packet capture
maintainer:      Nicola Bonelli <nicola@pfq.io> 
author:          Nicola Bonelli 
homepage:        https://www.pfq.io/
bug-reports:     https://github.com/pfq/PFQ/issues
category:        Network
cabal-version:   >= 1.10
build-type:      Simple

Library
  default-language: Haskell2010
  default-extensions: ForeignFunctionInterface, CPP
  build-depends: base >= 4.5, bytestring >= 0.9,
                 storable-tuple >= 0.0.2,
                 storablevector >= 0.2,
                 network

  exposed-modules: Network.PFq
                   Network.PFq.Default
                   Network.PFq.Experimental
                   Network.PFq.Lang
  ghc-options:     -Wall -fno-warn-missing-signatures

