name:            pfq
version:         6.1
synopsis:        PFQ interface for user-level packet capture
description:     PFQ interface for user-level packet capture
maintainer:      Nicola Bonelli <nicola@pfq.io> 
author:          Nicola Bonelli 
homepage:        https://www.pfq.io/
bug-reports:     https://github.com/pfq/PFQ/issues
category:        Network
cabal-version:   >= 1.10
build-type:      Simple

Library
  default-language: Haskell2010
  default-extensions: ForeignFunctionInterface, CPP
  build-depends: base >= 4.7, bytestring,
                 storable-tuple,
                 storablevector,
                 storable-record, 
                 process,
                 network,
                 aeson,
                 scientific,
                 clock,
                 mtl

  exposed-modules: Network.PFQ
                   Network.PFQ.Types
                   Network.PFQ.Lang
                   Network.PFQ.Lang.Prelude
                   Network.PFQ.Lang.Default
                   Network.PFQ.Lang.Experimental
  ghc-options:     -Wall -fno-warn-missing-signatures
  extra-libraries: pfq
