name:                   pfq-hcounters
version:                4.5

license-file:           LICENSE
author:                 Nicola Bonelli
maintainer:             nicola@pfq.io
category:               Utils
build-type:             Simple
cabal-version:          >=1.10

Executable pfq-hcounters
    main-is:            pfq-hcounters.hs
    build-depends:      base >= 4.7, 
                        pfq >= 4.5,
                        cmdargs, 
                        regex-posix, 
                        filepath , 
                        directory,
                        process,
                        containers,
                        split,
                        old-time

    extra-libraries:    pfq
    ghc-options:
        -O2
        -threaded
        -rtsopts

    default-language:   Haskell2010
